--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,11 +8,18 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">92</td><td></td><td></td></tr>
+<tr><th colspan="8">Suite</th></tr>
+<tr><td><a href="#t0">Test</a></td><td class="num">8</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">103</td><td>Sanity, Regression, Smoke</td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">testNG.AnnotationsPractice</td><td><a href="#m0">test</a></td><td rowspan="1">1674195554381</td><td rowspan="1">9</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">groupExecution.FirstTest</td><td><a href="#m0">test0</a></td><td rowspan="1">1674282059784</td><td rowspan="1">1</td></tr><tr class="passedeven"><td><a href="#m1">test1</a></td><td rowspan="1">1674282059787</td><td rowspan="1">2</td></tr><tr class="passedeven"><td><a href="#m2">test2</a></td><td rowspan="1">1674282059792</td><td rowspan="1">1</td></tr><tr class="passedodd"><td rowspan="2">groupExecution.SecondTest</td><td><a href="#m3">test0</a></td><td rowspan="1">1674282059798</td><td rowspan="1">5</td></tr><tr class="passedodd"><td><a href="#m4">test1</a></td><td rowspan="1">1674282059806</td><td rowspan="1">1</td></tr><tr class="passedeven"><td rowspan="3">groupExecution.ThirdTest</td><td><a href="#m5">test0</a></td><td rowspan="1">1674282059757</td><td rowspan="1">11</td></tr><tr class="passedeven"><td><a href="#m6">test1</a></td><td rowspan="1">1674282059774</td><td rowspan="1">1</td></tr><tr class="passedeven"><td><a href="#m7">test2</a></td><td rowspan="1">1674282059776</td><td rowspan="1">1</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">testNG.AnnotationsPractice#test</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Test</h2><h3 id="m0">groupExecution.FirstTest#test0</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">groupExecution.FirstTest#test1</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">groupExecution.FirstTest#test2</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">groupExecution.SecondTest#test0</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m4">groupExecution.SecondTest#test1</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m5">groupExecution.ThirdTest#test0</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m6">groupExecution.ThirdTest#test1</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m7">groupExecution.ThirdTest#test2</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
