--- a/test-output/old/Suite/groups.html
+++ b/test-output/old/Suite/groups.html
@@ -1,5 +1,1 @@
-<h2>Groups used for this test run</h2><table border="1">
-<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>Regression</td><td>ThirdTest.test2()[pri:0, instance:groupExecution.ThirdTest@3a6bb9bf]<br/>SecondTest.test1()[pri:0, instance:groupExecution.SecondTest@120f102b]<br/>SecondTest.test0()[pri:0, instance:groupExecution.SecondTest@120f102b]<br/></td></tr>
-<tr><td>Sanity</td><td>ThirdTest.test2()[pri:0, instance:groupExecution.ThirdTest@3a6bb9bf]<br/>FirstTest.test1()[pri:0, instance:groupExecution.FirstTest@732c2a62]<br/>FirstTest.test2()[pri:0, instance:groupExecution.FirstTest@732c2a62]<br/>SecondTest.test1()[pri:0, instance:groupExecution.SecondTest@120f102b]<br/>ThirdTest.test1()[pri:0, instance:groupExecution.ThirdTest@3a6bb9bf]<br/></td></tr>
-<tr><td>Smoke</td><td>ThirdTest.test2()[pri:0, instance:groupExecution.ThirdTest@3a6bb9bf]<br/>FirstTest.test0()[pri:0, instance:groupExecution.FirstTest@732c2a62]<br/>FirstTest.test2()[pri:0, instance:groupExecution.FirstTest@732c2a62]<br/>ThirdTest.test0()[pri:0, instance:groupExecution.ThirdTest@3a6bb9bf]<br/></td></tr>
-</table>
+<h2>Groups used for this test run</h2>
