--- a/test-output/old/Suite/classes.html
+++ b/test-output/old/Suite/classes.html
@@ -4,59 +4,16 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>groupExecution.ThirdTest</td>
+<td>crossbrowserparallel.ActitimeLoginTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>test2</td>
-<td>Sanity Regression Smoke </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>test0</td>
-<td>Smoke </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>test1</td>
-<td>Sanity </td>
-</tr>
-<tr>
-<td align='center' colspan='3'>@BeforeClass</td>
-</tr>
-<tr>
-<td align='center' colspan='3'>@BeforeMethod</td>
-</tr>
-<tr>
-<td align='center' colspan='3'>@AfterMethod</td>
-</tr>
-<tr>
-<td align='center' colspan='3'>@AfterClass</td>
-</tr>
-<tr>
-<td>groupExecution.SecondTest</td>
-<td>&nbsp;</td><td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@Test</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>test2</td>
+<td>loginTest</td>
 <td>&nbsp;</td></tr>
 <tr>
-<td>&nbsp;</td>
-<td>test0</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>test1</td>
-<td>Sanity Regression </td>
-</tr>
-<tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
 <tr>
@@ -69,26 +26,15 @@
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
 <tr>
-<td>groupExecution.FirstTest</td>
+<td>crossbrowserparallel.GoogleTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>test2</td>
-<td>Sanity Smoke </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>test0</td>
-<td>Smoke </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>test1</td>
-<td>Sanity </td>
-</tr>
+<td>simpleTest</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
