--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,20 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="da768f">  <td>23/01/21 11:50:59</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SecondTest.test0()[pri:0, instance:groupExecution.SecondTest@120f102b]">test0</td> 
-  <td>main@1432569632</td>   <td></td> </tr>
-<tr bgcolor="e2a091">  <td>23/01/21 11:50:59</td>   <td>-14</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FirstTest.test0()[pri:0, instance:groupExecution.FirstTest@732c2a62]">test0</td> 
-  <td>main@1432569632</td>   <td></td> </tr>
-<tr bgcolor="fea1ea">  <td>23/01/21 11:50:59</td>   <td>-42</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ThirdTest.test0()[pri:0, instance:groupExecution.ThirdTest@3a6bb9bf]">test0</td> 
-  <td>main@1432569632</td>   <td></td> </tr>
-<tr bgcolor="e2a091">  <td>23/01/21 11:50:59</td>   <td>-11</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FirstTest.test1()[pri:0, instance:groupExecution.FirstTest@732c2a62]">test1</td> 
-  <td>main@1432569632</td>   <td></td> </tr>
-<tr bgcolor="fea1ea">  <td>23/01/21 11:50:59</td>   <td>-25</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ThirdTest.test1()[pri:0, instance:groupExecution.ThirdTest@3a6bb9bf]">test1</td> 
-  <td>main@1432569632</td>   <td></td> </tr>
-<tr bgcolor="da768f">  <td>23/01/21 11:50:59</td>   <td>8</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SecondTest.test1()[pri:0, instance:groupExecution.SecondTest@120f102b]">test1</td> 
-  <td>main@1432569632</td>   <td></td> </tr>
-<tr bgcolor="fea1ea">  <td>23/01/21 11:50:59</td>   <td>-22</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ThirdTest.test2()[pri:0, instance:groupExecution.ThirdTest@3a6bb9bf]">test2</td> 
-  <td>main@1432569632</td>   <td></td> </tr>
-<tr bgcolor="e2a091">  <td>23/01/21 11:50:59</td>   <td>-6</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FirstTest.test2()[pri:0, instance:groupExecution.FirstTest@732c2a62]">test2</td> 
-  <td>main@1432569632</td>   <td></td> </tr>
+<tr bgcolor="7ffa75">  <td>23/01/23 12:06:38</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ActitimeLoginTest.loginTest(java.lang.String)[pri:0, instance:crossbrowserparallel.ActitimeLoginTest@a3d8174]">loginTest</td> 
+  <td>TestNG-tests-1@1378447045</td>   <td></td> </tr>
+<tr bgcolor="7ffa75">  <td>23/01/23 12:06:43</td>   <td>5286</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ActitimeLoginTest.loginTest(java.lang.String)[pri:0, instance:crossbrowserparallel.ActitimeLoginTest@fba92d3]">loginTest</td> 
+  <td>TestNG-tests-2@1271143750</td>   <td></td> </tr>
+<tr bgcolor="7ffa75">  <td>23/01/23 12:06:35</td>   <td>-3168</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ActitimeLoginTest.loginTest(java.lang.String)[pri:0, instance:crossbrowserparallel.ActitimeLoginTest@3d6f0054]">loginTest</td> 
+  <td>TestNG-tests-3@556745180</td>   <td></td> </tr>
+<tr bgcolor="60b471">  <td>23/01/23 12:06:32</td>   <td>-5861</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GoogleTest.simpleTest(java.lang.String)[pri:0, instance:crossbrowserparallel.GoogleTest@68c72235]">simpleTest</td> 
+  <td>TestNG-tests-1@1378447045</td>   <td></td> </tr>
+<tr bgcolor="60b471">  <td>23/01/23 12:06:32</td>   <td>-5861</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GoogleTest.simpleTest(java.lang.String)[pri:0, instance:crossbrowserparallel.GoogleTest@67c33749]">simpleTest</td> 
+  <td>TestNG-tests-2@1271143750</td>   <td></td> </tr>
+<tr bgcolor="60b471">  <td>23/01/23 12:06:32</td>   <td>-5861</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GoogleTest.simpleTest(java.lang.String)[pri:0, instance:crossbrowserparallel.GoogleTest@16a0ee18]">simpleTest</td> 
+  <td>TestNG-tests-3@556745180</td>   <td></td> </tr>
 </table>
