--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,22 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="79a8a8">  <td>23/01/20 11:49:14</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AnnotationsPractice.afterClass()[pri:0, instance:testNG.AnnotationsPractice@3059cbc]">&lt;&lt;afterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1846501247</td>   <td></td> </tr>
-<tr bgcolor="79a8a8">  <td>23/01/20 11:49:14</td>   <td>-2</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AnnotationsPractice.afterMethod()[pri:0, instance:testNG.AnnotationsPractice@3059cbc]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@1846501247</td>   <td></td> </tr>
-<tr bgcolor="79a8a8">  <td>23/01/20 11:49:14</td>   <td>148</td> <td title="&lt;&lt;AnnotationsPractice.afterSuite()[pri:0, instance:testNG.AnnotationsPractice@3059cbc]">&lt;&lt;afterSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1846501247</td>   <td></td> </tr>
-<tr bgcolor="79a8a8">  <td>23/01/20 11:49:14</td>   <td>6</td> <td>&nbsp;</td><td title="&lt;&lt;AnnotationsPractice.afterTest()[pri:0, instance:testNG.AnnotationsPractice@3059cbc]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1846501247</td>   <td></td> </tr>
-<tr bgcolor="79a8a8">  <td>23/01/20 11:49:14</td>   <td>-46</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AnnotationsPractice.beforeClass()[pri:0, instance:testNG.AnnotationsPractice@3059cbc]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1846501247</td>   <td></td> </tr>
-<tr bgcolor="79a8a8">  <td>23/01/20 11:49:14</td>   <td>-19</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AnnotationsPractice.beforeMethod()[pri:0, instance:testNG.AnnotationsPractice@3059cbc]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@1846501247</td>   <td></td> </tr>
-<tr bgcolor="79a8a8">  <td>23/01/20 11:49:14</td>   <td>-90</td> <td title="&gt;&gt;AnnotationsPractice.beforeSuite()[pri:0, instance:testNG.AnnotationsPractice@3059cbc]">&gt;&gt;beforeSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1846501247</td>   <td></td> </tr>
-<tr bgcolor="79a8a8">  <td>23/01/20 11:49:14</td>   <td>-81</td> <td>&nbsp;</td><td title="&gt;&gt;AnnotationsPractice.beforeTest()[pri:0, instance:testNG.AnnotationsPractice@3059cbc]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1846501247</td>   <td></td> </tr>
-<tr bgcolor="79a8a8">  <td>23/01/20 11:49:14</td>   <td>-17</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AnnotationsPractice.test()[pri:0, instance:testNG.AnnotationsPractice@3059cbc]">test</td> 
-  <td>main@1846501247</td>   <td></td> </tr>
+<tr bgcolor="79a8a8">  <td>23/01/24 11:49:42</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SoftAssertPractice.simpleTest()[pri:-1, instance:assertions.SoftAssertPractice@77eca502]">simpleTest</td> 
+  <td>main@1022081840</td>   <td></td> </tr>
+<tr bgcolor="79a8a8">  <td>23/01/24 11:49:42</td>   <td>36</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SoftAssertPractice.skillraryLogoTest()[pri:0, instance:assertions.SoftAssertPractice@77eca502]">skillraryLogoTest</td> 
+  <td>main@1022081840</td>   <td></td> </tr>
 </table>
